[gd_scene load_steps=19 format=2]

[ext_resource path="res://actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://prototype/player.png" type="Texture" id=2]
[ext_resource path="res://weapons/fire/FireStateMachine.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/hit_box/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/player/hitbox_shape.tres" type="Shape2D" id=5]
[ext_resource path="res://actors/health/Health.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/player/player_state_machine.gd" type="Script" id=7]
[ext_resource path="res://actors/player/states/motion/idle.gd" type="Script" id=8]
[ext_resource path="res://actors/player/states/motion/move.gd" type="Script" id=9]
[ext_resource path="res://actors/player/states/combat/stagger.gd" type="Script" id=10]
[ext_resource path="res://actors/player/states/motion/dash.gd" type="Script" id=11]
[ext_resource path="res://utils/states/state.gd" type="Script" id=12]
[ext_resource path="res://actors/player/states/die.gd" type="Script" id=13]

[sub_resource type="Animation" id=1]

resource_name = "SETUP"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -31.5144 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skin/Body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skin/Body:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

length = 0.7
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.35, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skin/Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35, 0.45, 0.65 ),
"transitions": PoolRealArray( 1, 1, 2.94246, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.812022, 1.23284 ), Vector2( 2.7717, 0.0452506 ) ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Skin/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1

[node name="Player" type="KinematicBody2D"]

position = Vector2( 865.331, 529.041 )
input_pickable = false
collision_layer = 1
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SETUP = SubResource( 1 )
anims/die = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/stagger = SubResource( 4 )
anims/walk = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Skin" type="Position2D" parent="." index="1"]

[node name="Body" type="Sprite" parent="Skin" index="0"]

position = Vector2( 0, -31.5144 )
texture = ExtResource( 2 )
offset = Vector2( 1.40758, -3.05176e-05 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="WeaponStateMachine" parent="." index="2" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="3"]

build_mode = 0
polygon = PoolVector2Array( -20, 0, -20, -20, 20, -20, 20, 0 )

[node name="HitBox" parent="." index="4" instance=ExtResource( 4 )]

editor/display_folded = true
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]

position = Vector2( 0, -15.9878 )
shape = ExtResource( 5 )

[node name="Health" parent="." index="5" instance=ExtResource( 6 )]

max_health = 20

[node name="StateMachine" type="Node" parent="." index="6"]

script = ExtResource( 7 )

[node name="Idle" type="Node" parent="StateMachine" index="0"]

script = ExtResource( 8 )

[node name="Move" type="Node" parent="StateMachine" index="1"]

script = ExtResource( 9 )
SPEED_NORMAL = 700
SPEED_SLOW = 300.0

[node name="Stagger" type="Node" parent="StateMachine" index="2"]

script = ExtResource( 10 )

[node name="Dash" type="Node" parent="StateMachine" index="3"]

script = ExtResource( 11 )
SPEED = 1300
MAX_COUNT = 2

[node name="Timer" type="Timer" parent="StateMachine/Dash" index="0"]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = false

[node name="CooldownTimer" type="Timer" parent="StateMachine/Dash" index="1"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="Explode" type="Node" parent="StateMachine" index="4"]

script = ExtResource( 12 )

[node name="Die" type="Node" parent="StateMachine" index="5"]

script = ExtResource( 13 )

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]

[connection signal="health_depleted" from="Health" to="." method="_on_Health_health_depleted"]

[connection signal="took_damage" from="Health" to="StateMachine" method="_on_Health_took_damage"]

[connection signal="timeout" from="StateMachine/Dash/Timer" to="StateMachine/Dash" method="_on_Timer_timeout"]

[connection signal="timeout" from="StateMachine/Dash/CooldownTimer" to="StateMachine/Dash" method="_on_CooldownTimer_timeout"]


[editable path="HitBox"]
